# productstudio

./: README.md  pyproject.toml
data/: .gitignore
notebooks/: test1.ipynb
rooftop-detection/: .gitignore  README.md  main.ipynb  pyproject.toml  read_image.py
scripts/: test.py
