[tool.poetry]
name = "productstudio"
version = "0.1.0"
description = ""
authors = ["Joshua <jschmidtnj@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
pandas = "^1.3.4"
ipykernel = "^6.5.0"
numpy = "^1.21.4"
matplotlib = "^3.5.0"
pycocotools = "^2.0.2"
scikit-image = "^0.18.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
