[tool.poetry]
name = "photovoltaic-detection"
version = "0.1.0"
description = ""
authors = ["Joshua <jschmidtnj@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
numpy = "^1.21.4"
matplotlib = "^3.5.0"
torch = "^1.10.0"
ipykernel = "^6.5.1"
torchvision = "^0.11.1"
sklearn = "^0.0"
opencv-python = "^4.5.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
